# New-York-Taxi

./: .gitignore  612_Project_New_York_Taxi.ipynb  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  config.py  models.py  preprocessing.py
tests/: __init__.py  test_models.py  test_preprocessing.py
